--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,17 +12,32 @@ This was to make it easier to follow.
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    color: #ffffff; /*  I added this to global style */
 }
 
 body {
     background-color: #d9dcd6;
 }
 
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #000000; /* had to add this when I made white the global font color */
+    text-align: center;
+}
+
+/*  I honestly have no idea when added color to the footer style didn't work, but it didn't.  So
+I had to also add color to the footer <p> style */
+footer p {
+color: black;
+}
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
+    /*color: #ffffff;*/
     
 }
 
@@ -45,6 +60,20 @@ h3 {
     text-align: center;
 }
 
+/* I changed this from "footer h2" to "h4".   This was the only instance of this header tag, so
+it seemed cleaner to just make it its own header tag.  */
+h4 {
+    font-size: 20px;
+    color: black;
+}
+
+/* I added the main style, because otherwise we'd have to specify the
+font-family twice. */
+main {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -63,7 +92,7 @@ nav ul li {
 }
 
 a {
-    color: #ffffff;
+    /* color: #ffffff;*/
     text-decoration: none;
 }
 
@@ -71,22 +100,12 @@ p {
     font-size: 16px;
 }
 
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
 
-/* I changed this from "footer h2" to "h4".   This is the only instance of this header, so
-it seemed cleaner to just make it its own header tag.  */
-h4 {
-    font-size: 20px;
-}
+
 
 .benefit-item {
     margin-bottom: 32px;
-    color: #ffffff;
+    
 }
 
 .benefit-item img{
@@ -98,6 +117,9 @@ h4 {
     max-height: 200px;
 }
 
+/* I was considering consolidating these 2 following, but decided against it.  To consolidate them,
+I couldn't think of any way that did not involve putting style attributes in the 
+html file itself, and I wanted to avoid that.*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -122,10 +144,14 @@ h4 {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     background-color: #2589bd;
 }
 
+/* I was considering putting the image link in the html, but decided against it.  It seemed that since
+this is a background image, it belongs in the css file.
+
+*/
 #hero {
     height: 800px;
     width: 100%;
@@ -138,6 +164,6 @@ h4 {
 #services-offered {
     width: 75%;
     display: inline-block;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #ffffff;
+    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
+    /* color: #ffffff;*/
 }
